--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,17 +1,157 @@
-<% layout('layout') -%>
-<% if (message) { %>
-<p><%= message %></p>
-<% } %>
-<form action="/register" method="post">
-    <div>
-        <label>Username:</label>
-        <input type="text" name="username"/><br/>
-    </div>
-    <div>
-        <label>Password:</label>
-        <input type="password" name="password"/>
-    </div>
-    <div>
-        <input type="submit" value="Submit"/>
-    </div>
-</form>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+    <title>Formulario de registro</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" ></meta>
+
+    <link href="css/bootstrap.css" rel="stylesheet" media="screen">
+    <link href="css/general.css" rel="stylesheet" media="screen">
+
+    <style type="text/css">
+        #demoWrapper {
+            padding : 1em;
+            width : 500px;
+            border-style: solid;
+        }
+
+        #fieldWrapper {
+        }
+
+        #demoNavigation {
+            margin-top : 0.5em;
+            margin-right : 1em;
+            text-align: right;
+        }
+
+        #data {
+            font-size : 0.7em;
+        }
+
+        input {
+            margin-right: 0.1em;
+            margin-bottom: 0.5em;
+        }
+
+        .input_field_25em {
+            width: 2.5em;
+        }
+
+        .input_field_3em {
+            width: 3em;
+        }
+
+        .input_field_35em {
+            width: 3.5em;
+        }
+
+        .input_field_12em {
+            width: 12em;
+        }
+
+        label {
+            margin-bottom: 0.2em;
+            font-weight: bold;
+            font-size: 0.8em;
+        }
+
+        label.error {
+            color: red;
+            font-size: 0.8em;
+            margin-left : 0.5em;
+        }
+
+        .step span {
+            float: right;
+            font-weight: bold;
+            padding-right: 0.8em;
+        }
+
+        .navigation_button {
+            width : 70px;
+        }
+
+        #data {
+            overflow : auto;
+        }
+
+        body {
+            padding-top: 40px;
+            padding-bottom: 40px;
+            background-color: #f5f5f5;
+        }
+
+    </style>
+</head>
+<body>
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="span8 offset2">
+            <% if (message.length>0) { %>
+            <div class="alert error"><%= message %></div>
+            <% } %>
+    <form id="demoForm" method="post" action="/register" class="bbq" style="max-width: 300px;
+            padding: 19px 29px 29px;
+            margin: 0 auto 20px;
+            background-color: #fff;
+            border: 1px solid #e5e5e5;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+            border-radius: 5px;
+            -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+            -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+            box-shadow: 0 1px 2px rgba(0,0,0,.05)">
+        <div id="fieldWrapper">
+				<span class="step" id="first">
+					<span class="font_normal_07em_black">Paso 1 - Datos personales</span><br />
+					<input name="name" type="text" class="input-block-level" placeholder="Nombre">
+					<input name="surname" type="text" class="input-block-level" placeholder="Apellidos">
+                    <input name="email" type="text" class="input-block-level" placeholder="Email">
+                    <input name="country" type="text" class="input-block-level" placeholder="País">
+                    <input name="city" type="text" class="input-block-level" placeholder="Ciudad">
+				</span>
+				<span id="second" class="step">
+					<span class="font_normal_07em_black">Paso 2 - Datos de usuario</span><br />
+					<input name="username" type="text" class="input-block-level" placeholder="Usuario">
+                    <input name="password" type="password" class="input-block-level" placeholder="Contraseña">
+                    <input type="password" class="input-block-level" placeholder="Confirmar contraseña">
+                    <h6>Pregunta Secreta</h6>
+                    <select name="question">
+                        <option value="1">Nombre de tu mejor amigo de la infancia</option>
+                        <option value="2">Nombre de tu primera mascota</option>
+                        <option value="3">Nombre de tu primer colegio</option>
+                    </select>
+                    <input name="answer" type="text" class="input-block-level" placeholder="Respuesta">
+				</span>
+        </div>
+        <div id="demoNavigation">
+            <button class="btn btn-short btn-primary" type="reset">Anterior</button>
+            <button class="btn btn-short btn-primary" type="submit">Siguiente</button>
+        </div>
+    </form>
+            </div>
+        </div>
+    <hr />
+
+    <p id="data"></p>
+</div>
+
+<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="js/jquery.form.js"></script>
+<script type="text/javascript" src="js/jquery.validate.js"></script>
+<script type="text/javascript" src="js/bbq.js"></script>
+<script type="text/javascript" src="js/jquery-ui-1.8.5.custom.min.js"></script>
+<script type="text/javascript" src="js/jquery.form.wizard.js"></script>
+
+<script type="text/javascript">
+    $(function(){
+        $("#demoForm").formwizard({
+                    validationEnabled: true,
+                    focusFirstInput : true
+                }
+        );
+    });
+</script>
+</body>
+</html>
