--- a/public/css/general.css
+++ b/public/css/general.css
@@ -15,7 +15,10 @@ body {
 	margin-bottom:50px;
 }
 .todoLists{
-	position: fixed;
+	position: absolute;
+	height: 80%;
+	min-height: 400px;
+	min-width: 200px;
 	width: 20%;
 	padding: 10px;
 }
@@ -54,4 +57,19 @@ body {
 .taskRow{
 	margin-bottom: 30px;
 	height: auto;
+}
+.listsLinks{
+	height: 80%;
+	max-height: 800px;
+	overflow-y: scroll;
+}
+#dropdownLists{
+	width: 100%;
+}
+.listsAddDelete{
+	min-width: 200px;
+	width: 90%;
+	position:absolute;
+	bottom: 0;
+	padding-bottom: 10px;
 }
