--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,79 +1,95 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Sign in &middot; Twitter Bootstrap</title>
+    <title>Login page - Typica</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Responsive HTML template for Your company">
+    <meta name="author" content="Oskar Żabik (oskar.zabik@gmail.com)">
 
     <!-- Le styles -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-        body {
-            padding-top: 40px;
-            padding-bottom: 40px;
-            background-color: #f5f5f5;
-        }
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 
-        .form-signin {
-            max-width: 300px;
-            padding: 19px 29px 29px;
-            margin: 0 auto 20px;
-            background-color: #fff;
-            border: 1px solid #e5e5e5;
-            -webkit-border-radius: 5px;
-            -moz-border-radius: 5px;
-            border-radius: 5px;
-            -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-            -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-            box-shadow: 0 1px 2px rgba(0,0,0,.05);
-        }
-        .form-signin .form-signin-heading,
-        .form-signin .checkbox {
-            margin-bottom: 10px;
-        }
-        .form-signin input[type="text"],
-        .form-signin input[type="password"] {
-            font-size: 16px;
-            height: auto;
-            margin-bottom: 15px;
-            padding: 7px 9px;
-        }
+    <link rel="stylesheet" href="css/typica-login.css">
 
-    </style>
-    <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+    <!-- Le favicon -->
+    <link rel="shortcut icon" href="favicon.ico">
 
 </head>
 
 <body>
 
+<div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="index.html"></a>
+        </div>
+    </div>
+</div>
+
 <div class="container">
 
-    <% if (registered) { %>
-    <p><%= registered %></p>
-    <% } %>
+    <div id="login-wraper">
 
-    <form class="form-signin" action="/login" method="post">
-        <h2 class="form-signin-heading">TODOlist Login</h2>
-        <input type="text" class="input-block-level" name = "username" placeholder="Username">
-        <input type="password" class="input-block-level" name="password" placeholder="Password">
-        <% if (message.length != 0) { %>
-        <div class="alert"><%= message %></div>
+        <% if (registered) { %>
+        <p><%= registered %></p>
         <% } %>
-        <label class="checkbox">
-            <input type="checkbox" value="remember-me"> Remember me
-        </label>
-        <button class="btn btn-large btn-primary" type="submit">Login</button>
-        <a href="/register">Sign in</a>
-    </form>
 
-</div> <!-- /container -->
+        <form class="form login-form" action="/login" method="post">
+            <legend>TODOlist<span class="blue">Login</span></legend>
+
+            <div class="body">
+                <label>Usuario</label>
+                <input type="text">
+
+                <label>Contraseña</label>
+                <input type="password">
+                <% if (message.length != 0) { %>
+                <div class="alert alert-error"><strong>Error: </strong><%= message %></div>
+                <% } %>
+
+                <div class="footer">
+                    <label class="checkbox inline">
+                        <input type="checkbox" id="inlineCheckbox1" value="option1"> Recordarme
+                    </label>
+
+                    <button type="submit" class="btn btn-success">Login</button>
+                </div>
+            </div>
+
+
+
+        </form>
+    </div>
+
+</div>
+
+<footer class="white navbar-fixed-bottom">
+    ¿No tienes una cuenta? <a href="/register" class="btn btn-black">Regístrate</a>
+</footer>
+
+
+<!-- Le javascript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/backstretch.min.js"></script>
+<script src="js/typica-login.js"></script>
+
+
 
 </body>
 </html>
