funcionalidad de login y registro terminada

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Login page - Typica</title>
+    <title>TODOlist - Login Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Responsive HTML template for Your company">
     <meta name="author" content="Oskar Żabik (oskar.zabik@gmail.com)">
@@ -25,19 +25,6 @@
 </head>
 
 <body>
-
-<div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="index.html"></a>
-        </div>
-    </div>
-</div>
 
 <div class="container">
 
