--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,121 +1,66 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <title>Formulario de registro</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" ></meta>
 
-    <link href="css/bootstrap.css" rel="stylesheet" media="screen">
-    <link href="css/general.css" rel="stylesheet" media="screen">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>TODOlist - Register Form</title>
+
+    <!-- Le styles -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/typica-login.css">
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Le favicon -->
+    <link rel="shortcut icon" href="favicon.ico">
 
     <style type="text/css">
-        #demoWrapper {
-            padding : 1em;
-            width : 500px;
-            border-style: solid;
-        }
-
-        #fieldWrapper {
-        }
 
         #demoNavigation {
             margin-top : 0.5em;
             margin-right : 1em;
             text-align: right;
         }
-
-        #data {
-            font-size : 0.7em;
-        }
-
-        input {
-            margin-right: 0.1em;
-            margin-bottom: 0.5em;
-        }
-
-        .input_field_25em {
-            width: 2.5em;
-        }
-
-        .input_field_3em {
-            width: 3em;
-        }
-
-        .input_field_35em {
-            width: 3.5em;
-        }
-
-        .input_field_12em {
-            width: 12em;
-        }
-
-        label {
-            margin-bottom: 0.2em;
-            font-weight: bold;
-            font-size: 0.8em;
-        }
-
-        label.error {
-            color: red;
-            font-size: 0.8em;
-            margin-left : 0.5em;
-        }
-
-        .step span {
-            float: right;
-            font-weight: bold;
-            padding-right: 0.8em;
-        }
-
-        .navigation_button {
-            width : 70px;
-        }
-
-        #data {
-            overflow : auto;
-        }
-
-        body {
-            padding-top: 40px;
-            padding-bottom: 40px;
-            background-color: #f5f5f5;
-        }
-
     </style>
+
 </head>
+
 <body>
-<div class="container-fluid">
-    <div class="row-fluid">
-        <div class="span8 offset2">
-            <% if (message.length>0) { %>
-            <div class="alert error"><%= message %></div>
-            <% } %>
-    <form id="demoForm" method="post" action="/register" class="bbq" style="max-width: 300px;
-            padding: 19px 29px 29px;
-            margin: 0 auto 20px;
-            background-color: #fff;
-            border: 1px solid #e5e5e5;
-            -webkit-border-radius: 5px;
-            -moz-border-radius: 5px;
-            border-radius: 5px;
-            -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-            -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-            box-shadow: 0 1px 2px rgba(0,0,0,.05)">
-        <div id="fieldWrapper">
+
+
+<div class="container">
+
+    <div id="login-wraper" class="login-form">
+
+        <legend>TODOlist<span class="blue">Register</span></legend>
+
+        <% if (message.length>0) { %>
+        <div class="alert error"><%= message %></div>
+        <% } %>
+
+        <form id="demoForm" class="login-form" method="post" action="/register"">
+        <div class="body">
 				<span class="step" id="first">
 					<span class="font_normal_07em_black">Paso 1 - Datos personales</span><br />
 					<input name="name" type="text" class="input-block-level" placeholder="Nombre">
 					<input name="surname" type="text" class="input-block-level" placeholder="Apellidos">
-                    <input name="email" type="text" class="input-block-level" placeholder="Email">
+                    <input name="email" type="text" class="input-block-level"
+                           placeholder="Email" onchange="validarEmail(this.form.email.value);">
                     <input name="country" type="text" class="input-block-level" placeholder="País">
                     <input name="city" type="text" class="input-block-level" placeholder="Ciudad">
 				</span>
 				<span id="second" class="step">
 					<span class="font_normal_07em_black">Paso 2 - Datos de usuario</span><br />
 					<input name="username" type="text" class="input-block-level" placeholder="Usuario">
-                    <input name="password" type="password" class="input-block-level" placeholder="Contraseña">
-                    <input type="password" class="input-block-level" placeholder="Confirmar contraseña">
+                    <input name="password" type="password" class="input-block-level"
+                           placeholder="Contraseña" id="txtNewPassword">
+                    <input type="password" class="input-block-level"
+                           placeholder="Confirmar contraseña" id="txtConfirmPassword" onchange="checkPasswordMatch()">
                     <h6>Pregunta Secreta</h6>
                     <select name="question">
                         <option value="1">Nombre de tu mejor amigo de la infancia</option>
@@ -129,20 +74,29 @@
             <button class="btn btn-short btn-primary" type="reset">Anterior</button>
             <button class="btn btn-short btn-primary" type="submit">Siguiente</button>
         </div>
-    </form>
-            </div>
         </div>
-    <hr />
+            <div class="registrationFormAlert" id="divCheckPasswordMatch">
+        </div>
+        </form>
+    </div>
 
-    <p id="data"></p>
 </div>
 
+<footer class="white navbar-fixed-bottom">
+    Volver a la página de  <a href="/login" class="btn btn-black">Login</a>
+</footer>
+
+
+<!-- Le javascript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
 <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="js/jquery.form.js"></script>
 <script type="text/javascript" src="js/jquery.validate.js"></script>
 <script type="text/javascript" src="js/bbq.js"></script>
 <script type="text/javascript" src="js/jquery-ui-1.8.5.custom.min.js"></script>
 <script type="text/javascript" src="js/jquery.form.wizard.js"></script>
+
 
 <script type="text/javascript">
     $(function(){
@@ -153,5 +107,29 @@
         );
     });
 </script>
+
+<script>
+    function validarEmail(valor) {
+        if (/w+([.-]?w+)*@w+([.-]?w+)*(.w{2,3})+$/.test(valor)){
+            return (true)
+        } else {
+            alert(valor);
+            return (false);
+        }
+    }
+</script>
+
+<script>
+    function checkPasswordMatch() {
+        var password = $("#txtNewPassword").val();
+        var confirmPassword = $("#txtConfirmPassword").val();
+
+        if (password != confirmPassword)
+            $("#divCheckPasswordMatch").html("Las contraseñas no coinciden!");
+        else
+            $("#divCheckPasswordMatch").html("Las contraseñas coinciden");
+}</script>
+
+
 </body>
 </html>
