--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1778,7 +1778,7 @@ table .span24 {
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url("glyphicons.png");
+  background-image: url("/img/glyphicons.png");
   background-position: 14px 14px;
   background-repeat: no-repeat;
 }
