--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,10 +38,9 @@
 
             <div class="body">
                 <label>Usuario</label>
-                <input type="text">
-
+                <input type="text" name="username">
                 <label>Contraseña</label>
-                <input type="password">
+                <input type="password" name="password">
                 <% if (message.length != 0) { %>
                 <div class="alert alert-error"><strong>Error: </strong><%= message %></div>
                 <% } %>
