--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,82 +1,125 @@
 html, body {
-  width:  auto;
-  margin: 0px;
+    width: auto;
+    margin: 0px;
 }
-body {
-	margin-left: 30px;
-	margin-right: 30px;
+
+.padding0 {
+    padding: 0;
 }
-.padding0{
-	padding: 0;
+
+.todoLists .tasksList {
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
-.todoLists .tasksList{
-	margin-top:50px;
-	margin-bottom:50px;
-}
-.todoLists{
+
+.todoLists {
     position: relative;
     height: 600px;
     min-width: 200px;
     padding: 10px;
 }
 
-.todoTasks{
+.todoTasks {
     overflow-y: scroll;
     position: relative;
     height: 600px;
     min-width: 200px;
     padding: 10px;
 }
-.taskListTitle{
-	background-color: white;
-	text-align: center;
-	background-color: #83c8f9;
-	color: white;
-	border-bottom: 2px solid gray;
+
+.taskListTitle {
+    background-color: white;
+    text-align: center;
+    background-color: #83c8f9;
+    color: white;
+    border-bottom: 2px solid gray;
 }
 
-.taskList li {
-    margin-left:10px
+.box {
+    padding: 10px;
+    width: 200px;
+    height: 200px;
+    display: inline-block;
+    margin: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-radius: 5px;
+    background-color: #fff;
+    -webkit-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
 }
 
-.task{
-    height: 100px;
-	text-align: center;
-    -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-    -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-    box-shadow:inset 0px 1px 0px 0px #ffffff;
-    background-color:#ededed;
-    -moz-border-radius:6px;
-    -webkit-border-radius:6px;
-    border-radius:6px;
-    border:1px solid #dcdcdc;
-    color:#777777;
-    font-family:arial;
-    font-size:15px;
-    font-weight:bold;
-    text-decoration:none;
-    text-shadow:1px 1px 0px #ffffff;
-    padding-top: 50px;
-}
-.task:hover{
-	text-decoration: none;
-	border-style: solid;
-    background-color:#dfdfdf;
+.box .task {
+    text-align: center;
+    background-color: #ededed;
+    color: #777777;
+    font-size: 15px;
+    font-weight: bold;
+    text-decoration: none;
+    text-shadow: 1px 1px 0px #ffffff;
+    overflow: hidden;
+    white-space: nowrap;
+    height: 100%;
+    width: 100%
 }
 
-.incompleted{
+.box .task-desc {
+    width: 232px;
+    height: 202px;
+    background: #EEE;
+    color: #333;
+    text-align: left;
+    position: absolute;
+    margin-top: -212px;
+    margin-left: 10px;
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;
+}
+.task:before {
+    content: "";
+    width: 1px;
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.task div {
+    display: inline-block;
+    vertical-align: middle;
+    white-space: normal;
+}
+
+.box .task-desc:hover {
+    text-decoration: none;
+    -webkit-animation: fadeIn 1s;
+    /* Safari 4+ */
+    -moz-animation: fadeIn 1s;
+    /* Fx 5+ */
+    -o-animation: fadeIn 1s;
+    /* Opera 12+ */
+    animation: fadeIn 1s;
+    /* IE 10+ */
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    opacity: 1;
+}
+
+.incompleted {
     color: #4787ED;
 }
 
-.completed{
+.completed {
     color: #54cd44;
 }
 
-.expired{
+.expired {
     color: #E26666;
 }
 
-.icon-big-plus{
+.icon-big-plus {
     background-image: url("/img/glyphicons-big.png");
     width: 26px;
     height: 26px;
@@ -90,14 +133,15 @@ body {
     background: #ffffff;
 }
 
-#dropdownLists{
-	width: 100%;
+#dropdownLists {
+    width: 100%;
 }
-.listsAddDelete{
+
+.listsAddDelete {
     bottom: 0;
     padding: 20px;
 }
 
-.shortcutTask{
+.shortcutTask {
     height: 100px;
 }
