--- a/public/css/general.css
+++ b/public/css/general.css
@@ -68,14 +68,13 @@ html, body {
 }
 
 .box .task-desc {
-    width: 232px;
-    height: 202px;
+    width: 200px;
+    height: 200px;
     background: #EEE;
     color: #333;
     text-align: left;
     position: absolute;
-    margin-top: -212px;
-    margin-left: 10px;
+    margin-top: -200px;
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
     opacity: 0;
 }
@@ -102,9 +101,18 @@ html, body {
     -o-animation: fadeIn 1s;
     /* Opera 12+ */
     animation: fadeIn 1s;
+    transition: opacity .25s ease-in-out;
+    -moz-transition: opacity .25s ease-in-out;
+    -webkit-transition: opacity .25s ease-in-out;
     /* IE 10+ */
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
     opacity: 1;
+}
+
+.name{
+    font-size: 20px;
+    font-weight: bold;
+    line-height:30px
 }
 
 .incompleted {
