--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2488,8 +2488,6 @@ table .span24 {
 .well {
 font-family: "Open Sans", sans-serif;
   min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
   background-color: #f5f5f5;
   border: 1px solid #A2A2A2;
   border: 1px solid rgba(0, 0, 0, 0.05);
@@ -2562,7 +2560,6 @@ font-family: "Open Sans", sans-serif;
 font-family: "Open Sans", sans-serif;
  background: url(../assets/bgside.png) repeat;
   min-height: 20px;
-  padding: 19px;
   margin-bottom: 20px;
   background-color: #f5f5f5;
   border: 1px solid #eee;
@@ -3842,11 +3839,9 @@ font-size: 11px;
 
 .navbar-fixed-top,
 .navbar-fixed-bottom {
-  position: fixed;
   right: 0;
   left: 0;
   z-index: 1030;
-  margin-bottom: 0;
 }
 
 .navbar-fixed-top .navbar-inner,
@@ -5093,7 +5088,7 @@ padding:30px;
  background: url(../assets/bg1.png) repeat-x;
 display:block;
 width:100%;
-height:300px;
+height:100%;
 
 
 }
@@ -5234,7 +5229,7 @@ height:600px;
   display:block;
   font-family: "Open Sans", sans-serif;
   width:100%;
-  height:50px;
+  height:100%;
 color:white;
   border-top:1px solid #2878FF;
 
