--- a/public/css/general.css
+++ b/public/css/general.css
@@ -111,7 +111,8 @@ html, body {
 .name {
     font-size: 20px;
     font-weight: bold;
-    line-height: 30px
+    line-height: 30px;
+    width: 100%;
 }
 
 .incompleted {
@@ -155,6 +156,7 @@ html, body {
 
 .favoritesCont {
     vertical-align: top!important;
+    width: 100%;
 }
 
 .favoritesCont * {
@@ -171,10 +173,9 @@ html, body {
 
 .favicon {
     width: 35px;
-    float: right;
     padding: 4px;
     background: url("/img/Star_Empty.png") no-repeat center;
-    background-size: 27px;
+    background-size: 30px;
 }
 
 .favicon:hover {
