--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1789,7 +1789,7 @@ table .span24 {
 }
 
 .icon-white {
-  background-image: url("glyphicons-halflings.png");
+  background-image: url("/img/glyphicons-halflings.png");
 }
 
 .icon-glass {
