--- a/public/css/general.css
+++ b/public/css/general.css
@@ -73,6 +73,23 @@ html, body {
     opacity: 0;
 }
 
+.box .task-desc:before{
+    content: "";
+    width: 1px;
+    height: 100%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.box .task-desc .header{
+    padding: 0;
+    width: 100%;
+}
+
+.box .task-desc .desc{
+    font-size: 14px;
+}
+
 .task:before {
     content: "";
     width: 1px;
@@ -86,7 +103,9 @@ html, body {
     vertical-align: middle;
     white-space: normal;
 }
-
+.addTask {
+   background: #ebebeb;
+}
 .addTask:hover {
     background: #c9c9c9;
 }
@@ -108,6 +127,9 @@ html, body {
     opacity: 1;
 }
 
+.box *{
+    cursor: default;
+}
 .name {
     font-size: 20px;
     font-weight: bold;
@@ -179,9 +201,16 @@ html, body {
 }
 
 .favicon {
-    width: 35px;
+    width: 30px;
+    height: 20px;
     padding: 4px;
     background: url("/img/Star_Empty.png") no-repeat center;
+    background-size: 30px;
+    vertical-align: middle;
+}
+
+.favorite {
+    background: url("/img/Star_Gold.png") no-repeat center;
     background-size: 30px;
 }
 
