--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,6 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>TODOlist - Register Form</title>
+    <meta name="viewport" content="width=1024" />
+    <meta name="description" content="Responsive HTML template for Your company">
+    <meta name="author" content="Oskar Żabik (oskar.zabik@gmail.com)">
 
     <!-- Le styles -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
