--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1206,7 +1206,7 @@ select:focus:required:invalid:focus {
   padding: 17px 20px 18px;
   margin-top: 18px;
   margin-bottom: 18px;
-  background-color: #f5f5f5;
+  background-color: #d2d7f5;
   border-top: 1px solid #e5e5e5;
   *zoom: 1;
 }
@@ -2487,7 +2487,7 @@ table .span24 {
 
 .well {
 font-family: "Open Sans", sans-serif;
-  min-height: 20px;
+  min-height: 312px;
   background-color: #f5f5f5;
   border: 1px solid #A2A2A2;
   border: 1px solid rgba(0, 0, 0, 0.05);
@@ -2559,7 +2559,7 @@ font-family: "Open Sans", sans-serif;
 .sidewell {
 font-family: "Open Sans", sans-serif;
  background: url(../assets/bgside.png) repeat;
-  min-height: 20px;
+  min-height: 323px;
   margin-bottom: 20px;
   background-color: #f5f5f5;
   border: 1px solid #eee;
@@ -5231,8 +5231,7 @@ height:600px;
   width:100%;
   height:100%;
 color:white;
-  border-top:1px solid #2878FF;
-
+      box-shadow: 4px;
   }
 
 
