--- a/public/css/general.css
+++ b/public/css/general.css
@@ -35,6 +35,7 @@ html, body {
 
 .todoTasks {
     overflow-y: auto;
+    overflow-x: hidden;
     position: relative;
     min-width: 200px;
 }
@@ -49,8 +50,8 @@ html, body {
 
 .box {
     padding: 10px;
-    width: 175px;
-    height: 175px;
+    width: 170px;
+    height: 170px;
     display: inline-block;
     margin: 10px;
     border: 1px solid rgba(0, 0, 0, 0.3);
@@ -77,13 +78,13 @@ html, body {
 }
 
 .box .task-desc {
-    width: 175px;
-    height: 175px;
+    width: 170px;
+    height: 170px;
     background: #EEE;
     color: #333;
     text-align: left;
     position: absolute;
-    margin-top: -175px;
+    margin-top: -170px;
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity = 0);
     opacity: 0;
 }
@@ -294,4 +295,12 @@ div .comprimed ul{
     top: 60px;
     background-color: #F1F1F1;
     border-right: 1px solid #E5E5E5;
+}
+
+.pagination:before {
+    content: "";
+    width: 1px;
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;
 }
