--- a/public/css/general.css
+++ b/public/css/general.css
@@ -304,3 +304,9 @@ div .comprimed ul{
     display: inline-block;
     vertical-align: middle;
 }
+
+.shadowed {
+    -webkit-box-shadow: 3px 2px 10px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    3px 2px 10px rgba(50, 50, 50, 0.75);
+    box-shadow:         3px 2px 10px rgba(50, 50, 50, 0.75);
+}
