envio de tareas

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -6,11 +6,7 @@ html, body {
 }
 
 .index {
-    background: url("/img/wood-bg.jpg") center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background: url("/img/wood-bg.jpg") repeat;
 }
 
 .padding0 {
@@ -303,4 +299,20 @@ div .comprimed ul{
     height: 100%;
     display: inline-block;
     vertical-align: middle;
+}
+
+
+.status{
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    line-height: 14px;
+    vertical-align: text-top;
+    background-repeat: no-repeat;
+}
+.online{
+    background-image: url("/img/green_light.png");
+}
+.offline{
+    background-image: url("/img/red_light.png");
 }
