Cambiado el deshacer para que aparezca como popup
Falta el borrado de listas y tareas. El borrado de los datos se
realiza, es decir por ejemplo al borrar una tarea los datos de la tarea
se borran y al hacer el get de la tarea devuelve null pero al hacer el
get de la lista de tareas aparece el identificador

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -321,3 +321,10 @@ div .comprimed ul{
 .offline{
     background-image: url("/img/red_light.png");
 }
+#alert-area {
+	position: absolute;
+	top: 10%;
+	left: 30%;
+	font-size: large;
+	text-align: center;
+}
