--- a/public/css/general.css
+++ b/public/css/general.css
@@ -328,3 +328,46 @@ div .comprimed ul{
 	font-size: large;
 	text-align: center;
 }
+
+.overlay {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 100;
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.overlayContainer {
+    margin-top: -90px;
+    margin-left: -90px;
+    top: 50%;
+    left: 50%;
+    background: url("img/loading.gif") no-repeat;
+    background-size: 180px;
+    text-align: center;
+    width: 180px;
+    height: 180px;
+    z-index: 101;
+    position: absolute;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    border-radius: 15px;
+    -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+
+}
+
+.invisible {
+    visibility: hidden;
+}
+
+.overlayContainer div {
+    padding: 10px;
+}
