--- a/public/css/general.css
+++ b/public/css/general.css
@@ -346,7 +346,7 @@ div .comprimed ul{
     margin-left: -90px;
     top: 50%;
     left: 50%;
-    background: url("img/loading.gif") no-repeat;
+    background: url("/img/loading.gif") no-repeat;
     background-size: 180px;
     text-align: center;
     width: 180px;
