--- a/public/css/general.css
+++ b/public/css/general.css
@@ -44,6 +44,12 @@ html, body {
     border-bottom: 2px solid gray;
 }
 
+#taskList{ list-style-type: none; margin: 0; padding: 0;}
+
+.ui-state-highlight {
+
+}
+
 .box {
     padding: 10px;
     width: 170px;
@@ -60,6 +66,15 @@ html, body {
     -webkit-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
+}
+
+.box-placeholder {
+    padding: 10px;
+    width: 170px;
+    height: 170px;
+    display: inline-block;
+    margin: 10px;
+    margin-top: -170px;
 }
 
 .box .task {
